# cccc

./: cccc.cabal  stack.yaml
src/: CCC.hs  Compiler.hs  Evaluation.hs  Main.hs  StdLib.hs  TEST.hs  TypeChecking.hs  Types.hs  Utils.hs
test/: CCCSpec.hs  EvalSpec.hs  TypeCheckingSpec.hs
