name:                cccc
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Sandy Maguire
maintainer:          sandy@sandymaguire.me
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules: TypeChecking, Types, CCC
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10, base-prelude, containers, lens, mtl, transformers, recursion-schemes, bound, deriving-compat
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  other-modules:    TypeCheckingSpec, CCCSpec
  hs-Source-Dirs:   test
  main-is:          Main.hs
  build-depends:    base >=4.9 && <4.10, base-prelude, containers, lens, mtl, transformers, hspec, cccc
